hello_world.html baru

--- a/hello_world.html
+++ b/hello_world.html
@@ -10,5 +10,6 @@
     <p>Hari ini sangat pusing</p>
     <p>testing aja</p>
     <p>Hari Rabu</p>
+    <p align="center">Rauf aja</p>
 </body>
 </html>
