hello_world.html tambahan gambar

--- a/hello_world.html
+++ b/hello_world.html
@@ -12,5 +12,6 @@
     <p>Hari Rabu</p>
     <p align="center">Rauf aja</p>
     <p>ikan goreng</p>
+    <p><img src="WhatsApp Image 2025-07-21 at 15.22.56_0836a375.jpg" alt="OSIS" style="display:block; margin:auto;">
 </body>
 </html>
