hello_world.html br,hr dan pre

--- a/hello_world.html
+++ b/hello_world.html
@@ -11,7 +11,13 @@
     <p>testing aja</p>
     <p>Hari Rabu</p>
     <p align="center">Rauf aja</p>
-    <p>ikan goreng</p>
-    <p><img src="WhatsApp Image 2025-07-21 at 15.22.56_0836a375.jpg" alt="OSIS" style="display:block; margin:auto;">
+    <p>ikan goreng dan bakar</p>
+    <p> Hari ini saya belajar : <br />
+        Membuat Paragraf, <br />
+        Membuat Heading dan <br />
+        Membuat Komentar</p>
+    <p>Rabu, 8 Agustus 2025 saya mencoba tag br, hr</p>
+    <hr />
+    <p><img src="https://i.imgur.com/tquKfVX.jpeg" alt="OSIS" style="display:block; margin:auto;" width="150" height="150">
 </body>
 </html>
