--- a/hello_world.html
+++ b/hello_world.html
@@ -18,6 +18,10 @@
         Membuat Komentar</p>
     <p>Rabu, 8 Agustus 2025 saya mencoba tag br, hr</p>
     <hr />
-    <p><img src="https://i.imgur.com/tquKfVX.jpeg" alt="OSIS" style="display:block; margin:auto;" width="150" height="150">
-</body>
+    <p><img src="https://imgur.com/IYh1OVy.jpeg" alt="CISCO" style="display:block; margin:auto;" width="300" height="150">
+        <a href="Link_web.html">Testing 2</a>
+    <p>Kembali lagi :
+        <a href="Membuat_Link.html">Kembali Ke Halaman Sebelumnya</a>
+    </p>
+    </body>
 </html>
