--- a/link/about.html
+++ b/link/about.html
@@ -6,8 +6,9 @@
     <title>About</title>
 </head>
 <body>
-    <h1>Download</h1>
-    <a href="index.html" title="Go to Home" style="color:red">Home</a> |
+    <h1>About</h1>
+        <p>
+          <a href="index.html" title="Go to Home" style="color:red">Home</a> |
           <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
           <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
           <a href="download.html" style="color:white;background-color: orange;">Download</a>
@@ -67,7 +68,7 @@
             <a href="#top">Kembali ke Atas!</a>
         </p>
         <hr>
-    <div>Copyright & copy; 2025 by Rauf Putra Gunawan</div>    
+    <div>Copyright &copy; 2025 by Rauf Putra Gunawan</div>    
     
 </body>
 </html>
