--- a/link/download.html
+++ b/link/download.html
@@ -6,7 +6,18 @@
     <title>Download</title>
 </head>
 <body>
-    
-    
+    <h1>Halaman Download</h1>
+    <p>
+        <a href="index.html" title="Go to Home" style="color:red">Home</a> |
+        <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
+        <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
+        <a href="download.html" style="color:white;background-color: orange;">Download</a>
+    </p>
+    <hr>
+    <p>Silakan Download File:
+        <a href="majalengka.pdf">Seputar Kabupaten Majalengka :)</a>
+    </p>
+    <hr>
+    <div>Copyright &copy; 2025 by Rauf Putra Gunawan</div>
 </body>
 </html>
