--- a/link/about.html
+++ b/link/about.html
@@ -58,7 +58,7 @@
             HTML yang memiliki id `penutup` dan membawa kita ke sana.
             Kira-kira begitulah cara kerjanya.
         </p>
-        <h2 id="penutup">Akhir Kata..</h2>
+        <h2 id="penutup">Akhir Kata...</h2>
         <p>
             Ini adalah penutup dari artikel ini, dan coba perhatikan headingnya.
             Di sana kita menggunakan id="penutup". Maka elemen ini akan menjadi
