--- a/hello_world.html
+++ b/hello_world.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belajar Git & HTML</title>
-</head>
-<body>
-    <p>Rauf belajar Git</p>
-    <p>Hari ini sangat pusing</p>
-    <p>testing aja</p>
-    <p>Hari Rabu</p>
-    <p align="center">Rauf aja</p>
-</body>
+    <head>
+        <tittle>HTML Rauf</tittle>
+    </head>
+    <body>
+        <p>Hari Rabu, 30 Juli 2025 Saya belajar html :)
+            
+        </p>
+    </body>
 </html>
