Update tambahan gambar

--- a/link/pages/contact.html
+++ b/link/pages/contact.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Contact</h1>
         <p>
-         <a href="index.html" title="Go to Home" style="color:red">Home</a> |
+         <a href="../index.html" title="Go to Home" style="color:red">Home</a> |
          <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
          <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
          <a href="download.html" style="color:white;background-color: orange;">Download</a>
@@ -19,9 +19,11 @@
             atau juga alamat email: <a href="mailto:raufpg12@gmail.com">raufpg12@gmail.com</a>
         </p>
         <p>
-            <a href="#" onclick="alert('Hello World!')">Jalankan JS</a>
-            <br>
-            <a href="#" onmouseover="alert('link sudah kamu sentuh')">Coba sentuh link ini</a>
+            <ul>
+                 <li><a href="#" onclick="alert('Hello World!')">Jalankan JS</a></li>
+                 <br>
+                 <li><a href="#" onmouseover="alert('link sudah kamu sentuh')">Coba sentuh link ini</a></li>
+            </ul>
         </p>
         <hr>
         <div>Copyright &copy; 2025 by Rauf Putra Gunawan</div>
