--- a/link/index.html
+++ b/link/index.html
@@ -9,9 +9,9 @@
     <h1>SELAMAT DATANG</h1>
     <p>
         <a href="index.html" title="Go to Home" style="color:red">Home</a> |
-        <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
-        <a href="about.html" title="Go to About" style="color:deeppink">About</a> |
-        <a href="download.html" style="color:white;background-color: orange;">Download</a> 
+        <a href="../link/pages/contact.html" title="Go to Contact" style="color:green">Contact</a> |
+        <a href="../link/pages/about.html" title="Go to About" style="color:deeppink">About</a> |
+        <a href="../link/pages/download.html" style="color:white;background-color: orange;">Download</a> 
     </p>
     <hr>
     <p>
