--- a/link/pages/about.html
+++ b/link/pages/about.html
@@ -8,16 +8,21 @@
 <body>
     <h1>About</h1>
         <p>
-          <a href="index.html" title="Go to Home" style="color:red">Home</a> |
+          <a href="../index.html" title="Go to Home" style="color:red">Home</a> |
           <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
           <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
           <a href="download.html" style="color:white;background-color: orange;">Download</a>
         </p>
         <hr>
+        <p>
+            <img src="../assets/img/smkn 2be.jpeg" width="200px" height="200px">
+        </p>
         <h1>Contoh link buntu</h1>
         <p>
-            <a href="#">Link Buntu</a>
-            <a href="#!">Link Buntu 2</a>
+            <ol>
+                 <li><a href="#">Link Buntu</a></li>
+                 <li><a href="#!">Link Buntu 2</a></li>
+            </ol>  
         </p>
         <h1>Contoh Link Anchor</h1>
         <p>Ini adalah contoh link anchor. Coba klik link ini:
