tambah tabel dan form login

--- a/link/pages/contact.html
+++ b/link/pages/contact.html
@@ -11,7 +11,8 @@
          <a href="../index.html" title="Go to Home" style="color:red">Home</a> |
          <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
          <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
-         <a href="download.html" style="color:white;background-color: orange;">Download</a>
+         <a href="download.html" style="color:white;background-color: orange;">Download</a> |
+         <a href="form.html"  title="Go to Form" style="color:rgb(240, 236, 5);">Form</a>
         </p>
         <hr>
         <p>
@@ -25,6 +26,24 @@
                  <li><a href="#" onmouseover="alert('link sudah kamu sentuh')">Coba sentuh link ini</a></li>
             </ul>
         </p>
+        <table border="2" cellpadding="5">
+            <tr>
+                <th bgcolor="yellow">Nama</th>
+                <th bgcolor="yellow">Kelas</th>
+                <th bgcolor="yellow">Hobi</th>
+            </tr>
+            <tr>
+                <td>Rauf</td>
+                <td>X TJKT 2</td>
+                <td>
+                    <ul>
+                        <li>Bermain Sepak Bola</li>
+                        <li>Bermain Video Game</li>
+                        <li>Bersepeda</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
         <hr>
         <div>Copyright &copy; 2025 by Rauf Putra Gunawan</div>
     
