--- a/link/index.html
+++ b/link/index.html
@@ -11,7 +11,8 @@
         <a href="index.html" title="Go to Home" style="color:red">Home</a> |
         <a href="../link/pages/contact.html" title="Go to Contact" style="color:green">Contact</a> |
         <a href="../link/pages/about.html" title="Go to About" style="color:deeppink">About</a> |
-        <a href="../link/pages/download.html" style="color:white;background-color: orange;">Download</a> 
+        <a href="../link/pages/download.html" style="color:white;background-color: orange;">Download</a> |
+        <a href="../link/pages/form.html" title="Go to Form" style="color:rgb(240, 236, 5);">Form</a>
     </p>
     <hr>
     <p>
