--- a/link/pages/about.html
+++ b/link/pages/about.html
@@ -11,7 +11,8 @@
           <a href="../index.html" title="Go to Home" style="color:red">Home</a> |
           <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
           <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
-          <a href="download.html" style="color:white;background-color: orange;">Download</a>
+          <a href="download.html" style="color:white;background-color: orange;">Download</a> |
+          <a href="form.html"  title="Go to Form" style="color:rgb(240, 236, 5);">Form</a>
         </p>
         <hr>
         <p>
