menambahkan semantik di link

--- a/link/index.html
+++ b/link/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial Link Di HTML</title>
 </head>
-<body>
+<body style="background-image: url(../link/assets/img/pc.jpg);"></body>
     <h1>SELAMAT DATANG</h1>
     <p>
         <a href="index.html" title="Go to Home" style="color:red">Home</a> |
         <a href="../link/pages/contact.html" title="Go to Contact" style="color:green">Contact</a> |
         <a href="../link/pages/about.html" title="Go to About" style="color:deeppink">About</a> |
         <a href="../link/pages/download.html" style="color:white;background-color: orange;">Download</a> |
-        <a href="../link/pages/form.html" title="Go to Form" style="color:rgb(240, 236, 5);">Form</a>
+        <a href="../link/pages/form.html" title="Go to Form" style="color:rgb(240, 236, 5);">Form</a> |
+        <a href="../link/pages/semantik.html" title="Go to semantik" style="color: aqua;">Semantik</a>
     </p>
     <hr>
     <p>
@@ -26,5 +27,5 @@
     </p>
     <hr>
     <div>Copyright &copy; 2025 by Rauf Putra Gunawan</div>    
-</body>
+
 </html>
