--- a/link/pages/about.html
+++ b/link/pages/about.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
 </head>
-<body>
+<body style="background-image: url(../assets/img/pc.jpg);"></body>
     <h1>About</h1>
         <p>
           <a href="../index.html" title="Go to Home" style="color:red">Home</a> |
           <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
           <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
           <a href="download.html" style="color:white;background-color: orange;">Download</a> |
-          <a href="form.html"  title="Go to Form" style="color:rgb(240, 236, 5);">Form</a>
+          <a href="form.html"  title="Go to Form" style="color:rgb(240, 236, 5);">Form</a> |
+          <a href="semantik.html" title="Go to semantik" style="color: aqua;">Semantik</a>
         </p>
         <hr>
         <p>
@@ -75,5 +76,5 @@
         </p>
         <hr>
          <div>Copyright &copy; 2025 by Rauf Putra Gunawan</div>    
-</body>
+
 </html>
