--- a/websiteku/index.html
+++ b/websiteku/index.html
@@ -3,9 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rauf Putra Gunawan Personal Website</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="CV-Rauf.pdf">Download CV</a> |
+        <a href="contact.html">Contact</a> |
+        <a href="about.html">About me</a>
+    </nav>
+
+   <hr/>
+
+    <header style="text-align: center;">
+        <img src="image/foto-profile.jpg" width="200" height="200" style="border-radius: 50%;"/>
+        <h1>Rauf Putra Gunawan</h1>
+        <p>(Network Engineer & Web Developer)</p>
+    </header>
+
+    <hr/>
+
+    <article style="text-align: center;">
+        <h2>Overview</h2>
+        <p>
+            Hi, saya adalah seorang pelajar dan web developer pemula yang berdomisili di Baleendah.
+            Saat ini sedang belajar HTML di Petani Kode.
+        </p>
+    </article>
+
+    <div style="max-width: 600px; margin: 3em auto">
+        <table border="1" width="100%">
+            <thead>
+                <tr>
+                    <th>Skill</th>
+                    <th>Pengalaman</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>HTML (Expert)</li>
+                            <li>CSS (Beginner)</li>
+                            <li>Javascript (Beginner)</li>
+                            <li>Install Windows</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Freelancer di Internet</li>
+                            <li>Leader Local Linux Community</li>
+                            <li></li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <hr>
+    <footer style="text-align: center;">
+        <p>Copyright &copy; 2025 Rauf Putra Gunawan</p>
+    </footer>
 </body>
 </html>
